force-app/main/default/objects/Quote_Line_Item__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <label>Line Item Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>